<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/route_guidance_padding"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/startCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/ic_circle" />

            <TextView
                android:id="@+id/startLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/startStnNm"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/start_line"
                android:textSize="@dimen/route_guidance_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startStnNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/startCircle"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:paddingStart="@dimen/route_guidance_padding"
                android:paddingEnd="@dimen/route_guidance_padding"
                android:text="@string/start_stn"
                android:textSize="@dimen/route_guidance_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startStnNm"
                android:layout_toEndOf="@+id/startCircle"
                android:paddingStart="@dimen/route_guidance_padding"
                android:paddingEnd="@dimen/route_guidance_padding"
                android:text="@string/direction"
                android:textSize="@dimen/route_guidance_text_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/viaLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_vertical_line" />

            <TextView
                android:id="@+id/remain"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/route_guidance_padding"
                android:paddingEnd="@dimen/route_guidance_padding"
                android:text="@string/remain"
                android:textSize="@dimen/route_guidance_text_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/endCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_circle" />

            <TextView
                android:id="@+id/endLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/endStnNm"
                android:gravity="center"
                android:text="@string/end_line"
                android:textSize="@dimen/route_guidance_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endStnNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/endCircle"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:paddingStart="@dimen/route_guidance_padding"
                android:paddingEnd="@dimen/route_guidance_padding"
                android:text="@string/end_stn"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/door"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endStnNm"
                android:layout_toEndOf="@+id/endCircle"
                android:paddingStart="@dimen/route_guidance_padding"
                android:paddingEnd="@dimen/route_guidance_padding"
                android:text="@string/door"
                android:textSize="@dimen/route_guidance_text_size" />

        </RelativeLayout>
    </LinearLayout>
</layout>