<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabMode="scrollable" />

            <ImageView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/route_guidance_margin"
                android:layout_toStartOf="@+id/reverse"
                android:contentDescription="@string/alarm"
                app:srcCompat="@drawable/ic_alarm_off_black_36dp" />

            <ImageView
                android:id="@+id/reverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/route_guidance_margin"
                android:layout_toStartOf="@+id/favorite"
                android:contentDescription="@string/reverse"
                app:srcCompat="@drawable/ic_swap_horiz_black_48dp" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/route_guidance_margin"
                android:contentDescription="@string/favorite_route"
                android:tint="@color/favoriteTint" />

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>