<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lineSymLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stn_menu_margin"
            android:gravity="center"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/stnNm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/stn_menu_margin"
            android:layout_marginTop="@dimen/stn_menu_margin"
            android:layout_marginEnd="@dimen/stn_menu_margin"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/stn_menu_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/stn_menu_margin"
                android:layout_marginTop="@dimen/stn_menu_margin"
                android:layout_marginBottom="@dimen/stn_menu_margin"
                android:layout_weight="1"
                android:background="@color/station_menu_icon"
                android:gravity="center"
                android:padding="@dimen/stn_menu_padding"
                android:text="@string/start_station"
                android:textSize="@dimen/stn_menu_text_size" />

            <TextView
                android:id="@+id/end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/stn_menu_margin"
                android:layout_marginTop="@dimen/stn_menu_margin"
                android:layout_marginBottom="@dimen/stn_menu_margin"
                android:layout_weight="1"
                android:background="@color/station_menu_icon"
                android:gravity="center"
                android:padding="@dimen/stn_menu_padding"
                android:text="@string/end_station"
                android:textSize="@dimen/stn_menu_text_size" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/stn_menu_margin"
                android:layout_weight="1"
                android:background="@color/station_menu_icon"
                android:gravity="center"
                android:padding="@dimen/stn_menu_padding"
                android:text="@string/station_info"
                android:textSize="@dimen/stn_menu_text_size" />

        </LinearLayout>

    </LinearLayout>
</layout>