<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/stn_info_map_elevation"
            android:padding="@dimen/stn_info_map_padding">

            <TextView
                android:id="@+id/appBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/expanded_naver_map_appbar_text"
                android:textSize="@dimen/stn_info_map_text_size" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/mapContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stn_info_margin"
            android:orientation="vertical"
            android:padding="10dp">

            <com.nhn.android.maps.NMapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_height" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/evContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stn_info_margin"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/num"
                    android:textSize="@dimen/stn_info_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/section"
                    android:textSize="@dimen/stn_info_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/place"
                    android:textSize="@dimen/stn_info_title_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/evListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</layout>